Fix image squashing when resizing

--- a/src/scss/gallery.scss
+++ b/src/scss/gallery.scss
@@ -53,6 +53,8 @@
 
     & > img {
 
+        object-fit: cover;
+
         &.reveal {
             animation-name: revealAnimation;
             animation-duration: $animation-duration;
